manifests/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.janikhenz.ch`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
