manifests/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.janikhenz.ch`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
